tests/error/non_static_from_member.gw
#! [contains] non-static member 'i' used from static function
class C {
  int i;
  fun static void test() { <<< i >>>; }
}
